[tool.poetry]
name = "keep_awake"
version = "0.0.1"
description = ""
authors = []


[tool.poetry.dependencies]
python = ">=3.11, <3.13"
playwright = "^1.44.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.22.1"
pre-commit = "^2.16.0"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"

[tool.ruff]
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
fix = true

[tool.ruff.pydocstyle]
convention="google"